# sepia-filter

./: .gitignore  CMakeLists.txt  README.md
src/include/: arguments.h  bmp.h  comp_time.h  image.h  sepia.h  sepia_asm.h
src/solution/: arguments.c  bmp.c  comp_time.c  image.c  main.c  sepia.c  sepia_asm.asm
